--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.18)
 
 # set variables for source files
-set(SOURCE_FILES src/main.cpp)
+set(SOURCE_FILES src/main.cpp
+        src/Game.cpp
+        src/Game.h)
 
 # set executable name
 set(EXE_FILE Game)
