--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -7,6 +7,8 @@ set(SOURCE_FILES src/main.cpp src/Game.cpp src/Game.h src/rendering/Shader.cpp s
         src/entities/Platform.h
         src/entities/Obstacle.cpp
         src/entities/Obstacle.h
+        #[[src/musicanalysis/BeatDetection.cpp
+        src/musicanalysis/BeatDetection.h]]
 )
 
 # set executable name
@@ -18,8 +20,10 @@ add_executable(${EXE_FILE} ${SOURCE_FILES})
 # require C++ 20 compiler
 target_compile_features(${EXE_FILE} PRIVATE cxx_std_20)
 
+include_directories(${CMAKE_SOURCE_DIR}/aubio)
 # link with dependencies
-target_link_libraries(${EXE_FILE} PRIVATE glad glfw glm soloud box2d)
+set(AUBIO_LIB_PATH ${CMAKE_SOURCE_DIR}/extern/aubio/build/src/aubio.lib)
+target_link_libraries(${EXE_FILE} PRIVATE glad glfw glm soloud box2d ${AUBIO_LIB_PATH})
 
 target_compile_definitions(${EXE_FILE} PRIVATE ASSET_ROOT=./assets/)
 
