--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.18)
 
 # set variables for source files
-set(SOURCE_FILES src/main.cpp src/Game.cpp src/Game.h src/rendering/Shader.cpp src/rendering/Shader.h src/rendering/Mesh.cpp src/rendering/Mesh.h src/entities/Entity.cpp src/entities/Entity.h src/entities/Player.cpp src/entities/Player.h src/Assets.h
+set(SOURCE_FILES src/main.cpp src/Game.cpp src/Game.h src/Constants.h src/rendering/Shader.cpp src/rendering/Shader.h src/rendering/Mesh.cpp src/rendering/Mesh.h src/entities/Entity.cpp src/entities/Entity.h src/entities/Player.cpp src/entities/Player.h src/Assets.h
         src/physics/ContactListener.h
         src/entities/Platform.cpp
         src/entities/Platform.h
