--- a/code/game/CMakeLists.txt
+++ b/code/game/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SOURCE_FILES src/main.cpp src/Game.cpp src/Game.h src/Constants.h src/render
         src/entities/Platform.h
         src/entities/Obstacle.cpp
         src/entities/Obstacle.h
+        src/physics/PhysicsSystem.h
 )
 
 # set executable name
