--- a/code/engine/CMakeLists.txt
+++ b/code/engine/CMakeLists.txt
@@ -18,7 +18,7 @@ include_directories(${CMAKE_SOURCE_DIR}/aubio)
 set(AUBIO_LIB_PATH ${CMAKE_SOURCE_DIR}/extern/aubio/build/src/aubio.lib)
 target_link_libraries(${ENGINE_NAME} PUBLIC glad glfw glm soloud box2d ${AUBIO_LIB_PATH} EnTT::EnTT)
 
-
+target_compile_definitions(${ENGINE_NAME} PRIVATE ASSET_ROOT=${CMAKE_SOURCE_DIR}/assets)
 
 target_compile_features(${ENGINE_NAME} PRIVATE cxx_std_20)
 set_target_properties(${ENGINE_NAME} PROPERTIES LINKER_LANGUAGE CXX)
