entt Events / EventManager for player gorunded and deathm but not fully working

--- a/code/engine/CMakeLists.txt
+++ b/code/engine/CMakeLists.txt
@@ -9,6 +9,8 @@ file(GLOB_RECURSE PRIVATE_HEADER_LIST CONFIGURE_DEPENDS "src/**.h")
 file(GLOB_RECURSE SOURCE_LIST CONFIGURE_DEPENDS "src/**.cpp")
 
 add_library(${ENGINE_NAME} ${HEADER_LIST} ${PRIVATE_HEADER_LIST} ${SOURCE_LIST}
+        include/engine/ecs/EventManager.h
+        include/engine/ecs/ExampleEvents.h
 )
 
 target_include_directories(${ENGINE_NAME} PUBLIC include/)
