--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "code/extern/entt"]
 	path = code/extern/entt
 	url = https://github.com/skypjack/entt.git
+[submodule "code/extern/stb"]
+	path = code/extern/stb
+	url = https://github.com/nothings/stb
