--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "code/extern/imgui"]
 	path = code/extern/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "code/extern/json"]
+	path = code/extern/json
+	url = https://github.com/nlohmann/json.git
