relative paths for executable/release

--- a/code/engine/CMakeLists.txt
+++ b/code/engine/CMakeLists.txt
@@ -13,13 +13,6 @@ set(IMGUI_SOURCES
         ${IMGUI_DIR}/backends/imgui_impl_opengl3.cpp
 )
 
-set(IMGUI_HEADERS
-        ${IMGUI_DIR}/imgui.h
-        ${IMGUI_DIR}/imgui_internal.h
-        ${IMGUI_DIR}/imconfig.h
-        ${IMGUI_DIR}/backends/imgui_impl_glfw.h
-        ${IMGUI_DIR}/backends/imgui_impl_opengl3.h
-)
 set(AUBIO_LIB_PATH ${CMAKE_SOURCE_DIR}/extern/aubio/build/src/aubio.lib)
 
 file(GLOB_RECURSE HEADER_LIST CONFIGURE_DEPENDS "include/**.h")
@@ -38,7 +31,7 @@ include_directories(${CMAKE_SOURCE_DIR}/aubio)
 # link with dependencies
 target_link_libraries(${ENGINE_NAME} PUBLIC glad glfw glm soloud box2d ${AUBIO_LIB_PATH} EnTT::EnTT nlohmann_json::nlohmann_json glaze::glaze)
 
-target_compile_definitions(${ENGINE_NAME} PRIVATE ASSET_ROOT=${CMAKE_SOURCE_DIR}/assets)
+target_compile_definitions(${ENGINE_NAME} PUBLIC ASSET_ROOT="assets")
 
 target_compile_features(${ENGINE_NAME} PRIVATE cxx_std_20)
 set_target_properties(${ENGINE_NAME} PROPERTIES LINKER_LANGUAGE CXX)
